clean up docker-compose.yml

--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -1,33 +1,33 @@
-version: "2"                                                                                                                                             │····································································································································································
-                                                                                                                                                         │····································································································································································
-networks:                                                                                                                                                │····································································································································································
-  apps:                                                                                                                                                  │····································································································································································
-    driver: overlay                                                                                                                                      │····································································································································································
-                                                                                                                                                         │····································································································································································
-services:                                                                                                                                                │····································································································································································
-  traefik:                                                                                                                                               │····································································································································································
-    image: hypriot/rpi-traefik                                                                                                                           │····································································································································································
-    environment:                                                                                                                                         │····································································································································································
-      - constraint:hypriot.hierarchy==leader                                                                                                             │····································································································································································
-    networks:                                                                                                                                            │····································································································································································
-      - apps                                                                                                                                             │····································································································································································
-    ports:                                                                                                                                               │····································································································································································
-      - "80:80"                                                                                                                                          │····································································································································································
-      - "8080:8080"                                                                                                                                      │····································································································································································
-    volumes:                                                                                                                                             │····································································································································································
-      - /dev/null:/traefik.toml                                                                                                                          │····································································································································································
-    command: --web --docker --docker.domain=docker.localhost --logLevel=DEBUG --docker.endpoint tcp://192.168.200.1:2378 --docker.watch                  │····································································································································································
-                                                                                                                                                         │····································································································································································
-  whoami:                                                                                                                                                │····································································································································································
-    image: hypriot/rpi-whoami                                                                                                                            │····································································································································································
-    depends_on:                                                                                                                                          │····································································································································································
-        - traefik                                                                                                                                        │····································································································································································
-    environment:                                                                                                                                         │····································································································································································
-      - constraint:hypriot.hierarchy!=leader                                                                                                             │····································································································································································
-      - PORT=80                                                                                                                                          │····································································································································································
-    networks:                                                                                                                                            │····································································································································································
-      - apps                                                                                                                                             │····································································································································································
-    labels:                                                                                                                                              │····································································································································································
-      - "traefik.backend=whoami"                                                                                                                         │····································································································································································
-      - "traefik.port=80"                                                                                                                                │····································································································································································
+version: "2"
+
+networks:
+  apps:
+    driver: overlay
+
+services:
+  traefik:
+    image: hypriot/rpi-traefik
+    environment:
+      - constraint:hypriot.hierarchy==leader
+    networks:
+      - apps
+    ports:
+      - "80:80"
+      - "8080:8080"
+    volumes:
+      - /dev/null:/traefik.toml
+    command: --web --docker --docker.domain=docker.localhost --logLevel=DEBUG --docker.endpoint tcp://192.168.200.1:2378 --docker.watch
+
+  whoami:
+    image: hypriot/rpi-whoami
+    depends_on:
+        - traefik
+    environment:
+      - constraint:hypriot.hierarchy!=leader
+      - PORT=80
+    networks:
+      - apps
+    labels:
+      - "traefik.backend=whoami"
+      - "traefik.port=80"
       - "traefik.frontend.rule=Host:whoami.docker.localhost"
